# OpenGL

./: .clang-format  .gitignore  .gitmodules  .~lock.Apuntes.docx#  Apuntes.docx  CMakeLists.txt  OpenGL.sln  Test  imgui.ini  testpdf
1.VertexAttributes/: CMakeLists.txt
1.VertexAttributes/src/: main.cpp
2.Shaders/: CMakeLists.txt
2.Shaders/res/shaders/: triangle.vs
2.Shaders/src/: main.cpp
3.OpenGlObjects/: CMakeLists.txt
3.OpenGlObjects/res/shaders/: triangle.fs  triangle.vs
3.OpenGlObjects/src/: main.cpp  shader.h
4.DealingErrors/: CMakeLists.txt
4.DealingErrors/src/: main.cpp  shader.cpp
5.AbstractingOpenGL/: CMakeLists.txt
5.AbstractingOpenGL/res/shaders/: triangle.fs  triangle.vs
5.AbstractingOpenGL/src/: IndexBuffer.cpp  IndexBuffer.h  Menu.cpp  Menu.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
5.AbstractingOpenGL/src/tests/: Test.h  TestClearColor.cpp  TestClearColor.h  TestRenderPanel.cpp  TestRenderPanel.h
Camera/Shaders/: shaders.glsl
Camera/src/: main.cc
CoorSystem/: .project
CoorSystem/Shaders/: shaders.glsl
CoorSystem/src/: main.cc
Coordenadas/: CMakeLists.txt
Coordenadas/Shaders/: shaders.glsl
Coordenadas/inc/glm/: .cproject  .project
Coordenadas/src/: Shader.cc  main.cc
DearImGui/: .project  imgui.ini
DearImGui/src/: main.cc
GLTutorial5TexturedCube/: CMakeLists.txt
GLTutorial5TexturedCube/res/shaders/: Texture.fs
GLTutorial5TexturedCube/src/: main.cpp
HelloTriangle/: CMakeLists.txt
Imgui_test/: .project  imgui.ini
Imgui_test/Shaders/: shaders.glsl
Imgui_test/resources/: gui_default_layout.ini  imgui.ini  shader.fs
Imgui_test/src/: Shader.hpp  main.cc
Matrix/inc/: stb_image.h
Matrix/src/: main.cc
Menu/: .project
Menu/src/: main.cc
Multithreading/: CMakeLists.txt
Multithreading/CSU_MANAGER/: Window.cpp
Multithreading/CSU_OPENGL/: Renderer.h
Multithreading/conf/: log4.cxx.properties
Multithreading/res/shaders/: triangle.fs  triangle.vs
Multithreading/src/: Example.cpp  ExampleLayer.cpp  FreeTypeV.cpp  MetPanelLayer.cpp  Multithreading.cpp  Multithreading.h  TestFreeType.cpp  main.cpp
Multithreading/src/tests/: TestPanel.h
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL/res/shaders/: Basic.shader
OpenGL/simple/: .cproject
OpenGL/simple/Debug/: makefile  simple
OpenGL/simple/Debug/src/: subdir.mk
OpenGL/simple/src/: simple.cpp
OpenGL/src/: main.cpp
Structure/: CMakeLists.txt
Structure/CSU_IMGUI/: ImGuiLayer.cpp  ImGuiLayer.h
Structure/CSU_MANAGER/: Layer.h  LayerStack.cpp  VisualManager.cpp  VisualManager.h  Window.cpp  Window.h
Structure/CSU_OPENGL/: LayerStack.cpp  LayerStack.h  Shader.h  Texture.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h  VisualManager.cpp  VisualManager.h
Structure/conf/: log4.cxx.properties
Structure/res/shaders/: FreeType.vs  general.vs  panel.fs
Structure/src/: Example.cpp  ExampleLayer.cpp  ExampleLayer.h  Font.h  Menu.cpp  Menu.h  MetPanelLayer.cpp  MetPanelLayer.h  Shader.h  TestFreeType.cpp  TestFreeType.h  Texture.h  VertexBuffer.h  VertexBufferLayout.h  main.cpp
Structure/src/tests/: TestClearColor.h  TestPanel.cpp
Structure/utils/: Log.h
Textures/: .project
Textures/Shaders/: shaders.glsl
Textures/src/: main.cc  stb_image.cc
Translations/: .project
Translations/Shaders/: shader.vs  shaders.glsl
Translations/inc/glm/: .project
Translations/src/: main.cc
Tutorial 1/Debug/: Tutorial 1  makefile
Tutorial 2/Debug/: Tutorial 2  makefile
Tutorial 2/src/: main.cc
Tutorial 3/Debug/: Tutorial 1
Tutorial 3/Debug/src/: subdir.mk
VisualObjects/: CMakeLists.txt
VisualObjects/res/shaders/: FreeType.fs  panel.vs  triangle.vs
VisualObjects/src/: IndexBuffer.h  Menu.cpp  Menu.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  main.cpp
VisualObjects/src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestFreeType.cpp  TestFreeType.h  TestPanel.cpp  TestPanel.h
WindPanel/: CMakeLists.txt
WindPanel/CSU_IMGUI/: ImGuiLayer.h
WindPanel/CSU_MANAGER/: Layer.cpp  LayerStack.h  VisualManager.cpp
WindPanel/CSU_OPENGL/: IndexBuffer.h  Shader.h  VertexBuffer.h
WindPanel/res/shaders/: general.fs
WindPanel/src/: CommLoop.h  Example.cpp  ExampleLayer.cpp  Font.cpp  FreeTypeV.h  Menu.h  MetPanelLayer.cpp  TestFreeType.cpp  WindPanel.cpp  WindPanel.h  main.cpp
WindPanel/src/tests/: TestFreeType.cpp  TestFreeType.h
hello triangle/: .project
hello triangle/Debug/: makefile  objects.mk
hello triangle/Shaders/: shaders.glsl
hello triangle/src/: main.cc
manage input/: .project
manage input/Debug/: makefile
shaders/: .project
shaders/Shaders/: shaders.glsl
shaders/src/: main.cc
shaders2/: .project
shaders2/Shaders/: shaders.glsl
shaders2/src/: main.cc
simple/src/: main.cc
