cmake_minimum_required(VERSION 3.0.0)
project(OpenGL)
set(CMAKE_CXX_STANDARD 17)
# This defines an MY_DEBUG flag only if it is in debug mode
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DMY_DEBUG") 
# option(MY_DEBUG "Defines MY_DEBUG option to debug output context in OpenGL" ON)
add_subdirectory(HelloTriangle)
add_subdirectory(Coordenadas)
add_subdirectory(1.VertexAttributes)
add_subdirectory(2.Shaders)
add_subdirectory(3.OpenGlObjects)
add_subdirectory(4.DealingErrors)
add_subdirectory(5.AbstractingOpenGL)